# learn-git

./: another_first_line.txt
2.Semester/: CMakeLists.txt  run_cmake.sh
2.Semester/2.Vorlesung/: student.c++
